Correction mobile et tablette

--- a/themes/agen/assets/scss/_typography.scss
+++ b/themes/agen/assets/scss/_typography.scss
@@ -28,7 +28,7 @@ p {
 
 .display-1{
   font-size: 55px;
-  @include mobile {
+  @include tablet {
     font-size: 30px;
   }
 }
@@ -42,21 +42,21 @@ h1,h2,h3,h4,h5,h6 {
 
 h1, .h1{
   font-size: 50px;
-  @include mobile {
+  @include tablet {
     font-size: 30px;
   }
 }
 
 h2, .h2{
   font-size: 44px;
-  @include mobile {
+  @include tablet {
     font-size: 28px;
   }
 }
 
 h3, .h3{
   font-size: 36px;
-  @include mobile {
+  @include tablet {
     font-size: 25px;
   }
 }
